Tweaks: header section now has a div for the image and a div for the text, with each taking up 50% of the width

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <div class="container">
             <div class="hero-container">
-                <img src="littlefeed-promo-hero@2x.jpeg" alt="Littlefeed Promo" class="hero-image">
+                <div class="hero-image-wrapper">
+                    <img src="littlefeed-promo-hero@2x.jpeg" alt="Littlefeed Promo" class="hero-image">
+                </div>
                 <div class="header-container">
                     <img src="littlefeed-logo-main.png" alt="littlefeed logo">
                     <div class="main-title">a feeding tracker for your little one.</div>
