Tweaks: each feature section now has a div for the image and a div for the text, with each taking up 50% of the width

--- a/index.html
+++ b/index.html
@@ -29,28 +29,36 @@
 
     <div class="container">
         <div class="feature-section">
-            <img src="littlefeed-promo-iphone-addevent@2x.jpg" alt="Feature 1">
+            <div class="feature-image-wrapper">
+                <img src="littlefeed-promo-iphone-addevent@2x.jpg" alt="Feature 1">
+            </div>
             <div class="feature-text">
                 <h2>Quickly track how your baby feeds.</h2>
                 <p>littlefeed is the quickest and simplest way of tracking how your baby feeds. Record breastfeeding, bottlefeeding, or pumping times, including which side you used and how much you fed or pumped. All with an elegantly designed app optimized for one-handed use.</p>
             </div>
         </div>
         <div class="feature-section">
-            <img src="littlefeed-promo-watch@2x.jpg" alt="Feature 2">
+            <div class="feature-image-wrapper">
+                <img src="littlefeed-promo-watch@2x.jpg" alt="Feature 2">
+            </div>
             <div class="feature-text">
                 <h2>Track and view on the go with Apple Watch.</h2>
                 <p>With littlefeed, you can track your feedings and pumpings on iPhone or Apple Watch anywhere you are, then view your last feeding right on your watch face. It's the quickest way to answer the question, "when did I last feed my baby?"</p>
             </div>
         </div>
         <div class="feature-section">
-            <img src="littlefeed-promo-iphone-siri@2x.jpg" alt="Feature 3">
+            <div class="feature-image-wrapper">
+                <img src="littlefeed-promo-iphone-siri@2x.jpg" alt="Feature 3">
+            </div>
             <div class="feature-text">
                 <h2>Hands-free with Siri.</h2>
                 <p>Babies are a handful - literally. With iOS 12, you can set up a Siri shortcut to log an event. Set up a command like "hey Siri, breastfeed left" and Siri will automatically log the event.</p>
             </div>
         </div>
         <div class="feature-section">
-            <img src="littlefeed-promo-iphone-sync@2x.jpg" alt="Feature 4">
+            <div class="feature-image-wrapper">
+                <img src="littlefeed-promo-iphone-sync@2x.jpg" alt="Feature 4">
+            </div>
             <div class="feature-text">
                 <h2>Sync with your partner - privately.</h2>
                 <p>You and your partner can each log events at different times, then sync up to keep a complete log of your events. All privately, without any servers or accounts.</p>
