--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <footer>
         <div class="container">
             <p>Copyright 2018 Jason Ji and Colin Hart | 
-            <a href="contact-us.html">Contact Us</a> | 
+            <a href="mailto:littlefeed@info.app">Contact Us</a> | 
             <a href="privacy-policy.html">Privacy Policy</a></p>
         </div>
     </footer>
