Tweak: copyright to ©

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <footer>
         <div class="container">
-            <p>Copyright 2018 Jason Ji and Colin Hart | 
+            <p>© 2018 Jason Ji and Colin Hart | 
             <a href="mailto:littlefeed@info.app">Contact Us</a> | 
             <a href="privacy-policy.html">Privacy Policy</a></p>
         </div>
