--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- TODO: -->
+<!-- App Store button -->
+<!-- header-container only takes up 50% on large screen sizes -->
+<!-- favicon -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
