--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- TODO: -->
 <!-- App Store button -->
 <!-- header-container only takes up 50% on large screen sizes -->
-<!-- favicon -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,6 +10,7 @@
     <title>littlefeed</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
     <header>
